welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:44: error: value tiInt is not a member of String
  	dessine(litMessage().tiInt, couleurs)
                             ^