welcome.lessons.welcome.array.basics.Array2.scala.code
def tableauCouleurs():Array[Color] =
{
  var tableau = new Array[Color] (getMondeHauteur())
  
  tableau(0) = getCouleurSol()
  for (i <- 1 to getMondeHauteur() - 1)
  {
    avance()
    tableau(i) = getCouleurSol()
  }
  
  return tableau
}

def seReplacer()
{
  recule(getMondeHauteur() - 1)
  gauche()
  avance()
  droite()
}

def dessine(decalage:Int, couleurs:Array[Color])
{
  setCouleurBrosse(couleurs(decalage % couleurs.length))
  baisseBrosse()
  leveBrosse()
  for (i <- 1 to couleurs.length - 1)
  {
    avance()
    setCouleurBrosse(couleurs((i + decalage) % couleurs.length))
    baisseBrosse()
    leveBrosse()
  }
}

override def run()
{
  var couleurs = tableauCouleurs()
  
  for (i <- 1 to getMondeLargeur() - 1)
  {
  	seReplacer()
  	dessine(litMessage().tiInt, couleurs)
  }
  recule(getMondeHauteur() - 1)
}